# Fourier

./: .gitignore  CMakeLists.txt  a.out  chunks.h  main.cpp  shell.nix  test.cpp  wave.h
src/: a.out  chunks.cpp  chunks.h  common.hpp  complex.cpp  complex.h  controller.cpp  controller.hpp  main.cpp  model.cpp  model.hpp  plot.sh  renderHandler.cpp  renderHandler.hpp  sminchia.cpp  test.cpp  transforms.cpp  transforms.h  view.cpp  view.hpp  wave.cpp  wave.h
src/audio/: FileVector.hpp  chunks.cpp  wave.cpp  wave.h  wave.hpp  workers.cpp  workers.hpp
src/graphics/: #Component.hpp#  .#Component.hpp  .#Plotter.hpp  AsyncComponent.hpp  Box.hpp  Component.cpp  Component.hpp  Event.cpp  Event.hpp  Plotter.cpp  Plotter.hpp  PlotterWorker.cpp  PlotterWorker.hpp  Text.cpp  Text.cpp~  Text.hpp  Text.hpp~  Timer.hpp  colors.hpp  common.hpp
src/math/: complex.cpp  complex.h  fourier.cpp  transforms.cpp  transforms.h
src/utils/: TimeStamp.hpp  conversions.hpp  conversions.hpp~  observer.hpp
tests/: a.out  test.cpp
